# ulinalg

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: array.cpp  array.hpp  decomp.cpp  decomp.hpp
tests/: CMakeLists.txt  test_array.cpp  test_decomp.cpp
